--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -132,8 +132,22 @@
 }
 
 .sendButton{
-  background-color: #88dc65;
+  background-color: #7db167;
   border: 0;
   height: 130%;
   font-size: 130%;
+}
+
+#serOrador{
+  margin-bottom: 2%;
+}
+
+#footer{
+  background: linear-gradient(90deg, #283747, #2471A3);
+  margin-bottom: 1%;
+}
+
+#footer .nav-link {
+  color: #fff;
+  transition: color 0.3s;
 }
