--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -7,6 +7,11 @@
   padding-bottom: 1.5%;
 }
 
+.btnBlur{
+  background-color: transparent;
+  backdrop-filter: blur(2px); 
+}
+
 #logoCodoacodo {
   width: 20%;
 }
