--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -206,5 +206,22 @@
 
 .junior{
   border-color: orange;
+}
 
+.formbtn{
+  height: 45px;
+  background-color: #97c93f;
+  border-color: #97c93f;
+}
+
+.btnDelete{
+  margin-right: 4px;
+}
+
+.btnResume{
+  margin-left: 8px;
+}
+
+.alert-primary {
+  color: rgb(59, 59, 168);
 }
